     to the rules for such a type laid out in the Python docs:
     http://docs.python.org/api/supporting-cycle-detection.html

  after Zope 2.8.7 (unreleased)

    Bugs fixed

      - Collector #2116: sequence.sort() did not work properly
        locale related comparison methods

      - Collector 2077: fixed problem with ACTUAL_URL and SiteRoot


  Zope 2.8.7 (2007/05/29)

    Features added:
        
      - ZODB 3.4.3

    Bugs fixed

      - Collector #1429: Fix name/value traversal of ZSQL methods (backport
        from 2.9).

      - Collector #1447: When editing content on a virtual-hosted zope,
        AcceleratedHTTPCacheManager now purges the correct URL.

      - Collector #2072: Applied patch to fix problem with overly restrictive
        __bobo_traverse__ security and tests.

      - Applied patch by Yoshinori Okuji to fix some XML export/import
        problems

      - Collector #2037: fixed broken ACTUAL_URL for '/'

      - Collector #2039: 'ZPublisher.HTTPRequest.HTTPRequest._authUserPW'
        choked on passwords which contained colons.

      - Missing import of NotFound in webdav.Resource.

      - OFS.Image: 'Image.update_data' did not refresh the Etag.

      - Collector #940: PageTemplateFile: Open files with universal
        line-endings support to avoid line-endings problems within python
        expressions.

      - OFS.PropertyManager: Provided missing security declarations.


  Zope 2.8.6 (2006/02/25)

    Bugs Fixed

      - Collector #1819: fixed signature of
        MountedObject.SimpleTrailblazer._construct(

      - ZPublisher.BaseRequest: The publisher would happily publish attributes
        of type 'bool' and 'complex', as well as Python 2.4's 'set' and
        'frozenset'.

      - Collector #1991: ZPublisher did not deal properly with a trailing
        %20 in the URL

      - Collector #2013: improved XHTML conformance of error messages,
        some of which did not close '<p>' tags.
