@@ -23,6 +23,7 @@ Zope Changes
 
       - Collector 2077: fixed problem with ACTUAL_URL and SiteRoot
 
+      - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership
 
   Zope 2.8.7 (2007/05/29)
 
